--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Canada -- Social life and customs -- Fiction'
 - !lcsh 'Iles-de-la-Madeleine (Québec) -- Fiction'
 - !lcsh 'Prince Edward Island -- Fiction'
+- GITenberg
 title: 'The Mermaid
 
   A Love Tale'
